Leaf age section needs some more guidance

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -6,6 +6,26 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\6M4T4HFU\\j.1365-3040.1998.00364.html}
 }
 
+@article{albertCrypticPhenologyPlants2019,
+  title = {Cryptic Phenology in Plants: {{Case}} Studies, Implications, and Recommendations},
+  shorttitle = {Cryptic Phenology in Plants},
+  author = {Albert, Loren P. and Restrepo-Coupe, Natalia and Smith, Marielle N. and Wu, Jin and Chavana-Bryant, Cecilia and Prohaska, Neill and Taylor, Tyeen C. and Martins, Giordane A. and Ciais, Philippe and Mao, Jiafu and Arain, M. Altaf and Li, Wei and Shi, Xiaoying and Ricciuto, Daniel M. and Huxman, Travis E. and McMahon, Sean M. and Saleska, Scott R.},
+  date = {2019},
+  journaltitle = {Global Change Biology},
+  volume = {25},
+  number = {11},
+  pages = {3591--3608},
+  issn = {1365-2486},
+  doi = {10.1111/gcb.14759},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/gcb.14759},
+  urldate = {2021-08-01},
+  abstract = {Plant phenology—the timing of cyclic or recurrent biological events in plants—offers insight into the ecology, evolution, and seasonality of plant-mediated ecosystem processes. Traditionally studied phenologies are readily apparent, such as flowering events, germination timing, and season-initiating budbreak. However, a broad range of phenologies that are fundamental to the ecology and evolution of plants, and to global biogeochemical cycles and climate change predictions, have been neglected because they are “cryptic”—that is, hidden from view (e.g., root production) or difficult to distinguish and interpret based on common measurements at typical scales of examination (e.g., leaf turnover in evergreen forests). We illustrate how capturing cryptic phenology can advance scientific understanding with two case studies: wood phenology in a deciduous forest of the northeastern USA and leaf phenology in tropical evergreen forests of Amazonia. Drawing on these case studies and other literature, we argue that conceptualizing and characterizing cryptic plant phenology is needed for understanding and accurate prediction at many scales from organisms to ecosystems. We recommend avenues of empirical and modeling research to accelerate discovery of cryptic phenological patterns, to understand their causes and consequences, and to represent these processes in terrestrial biosphere models.},
+  langid = {english},
+  keywords = {climate change,dynamic global vegetation models,plant ecology,plant physiology,seasonality,terrestrial biosphere models,whole plant biology},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/gcb.14759},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\PD3H5C59\\Albert et al. - 2019 - Cryptic phenology in plants Case studies, implica.pdf}
+}
+
 @article{allenUnderestimationGlobalVulnerability2015,
   title = {On Underestimation of Global Vulnerability to Tree Mortality and Forest Die-off from Hotter Drought in the {{Anthropocene}}},
   author = {Allen, Craig D. and Breshears, David D. and McDowell, Nate G.},
@@ -3406,6 +3426,12 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\LRDG8FTC\\Ichie et al. - 2016 - Ecological distribution of leaf stomata and tricho.pdf}
 }
 
+@online{ImpactsLeafAge,
+  title = {Impacts of Leaf Age and Heat Stress Duration on Photosynthetic Gas Exchange and Foliar Nonstructural Carbohydrates in {{Coffea}} Arabica - {{Marias}} - 2017 - {{Ecology}} and {{Evolution}} - {{Wiley Online Library}}},
+  url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1002/ece3.2681},
+  urldate = {2021-08-01}
+}
+
 @online{InteractionsWaterStress,
   title = {Interactions between Water Stress, Sun‐shade Acclimation, Heat Tolerance and Photoinhibition in the Sclerophyll {{Heteromeles}} Arbutifolia - {{VALLADARES}} - 1997 - {{Plant}}, {{Cell}} \&amp; {{Environment}} - {{Wiley Online Library}}},
   url = {https://onlinelibrary-wiley-com.smithsonian.idm.oclc.org/doi/full/10.1046/j.1365-3040.1997.d01-8.x},
@@ -5067,6 +5093,25 @@
   abstract = {Tropical rainforest trees adjust leaf traits during ontogeny to cope with changes in the physical environment and maximize their carbon uptake. The aim of this study was to determine the plasticity index (PI) of leaf traits in understory and canopy leaves of six Amazonian tree species. In four of the six species the PI of leaf traits varied within species, and in four of the ten leaf traits assessed, the PI differed between species. The greatest PI values were found for stomatal density (Ds) and CO2-saturated photosynthesis, and the lowest ones were found for stomatal size, and leaf thickness. Despite the differences in PI values within species, the mean PI was similar in all the six species. As the saplings grow toward the canopy, the strategy to increase carbon uptake involves increasing Ds and leaf nitrogen and reducing stomatal size.},
   langid = {english},
   file = {C\:\\Users\\Me\\Zotero\\storage\\CGEGPBWD\\Marenco et al. - 2017 - Leaf trait plasticity in six forest tree species o.pdf}
+}
+
+@article{mariasImpactsLeafAge2017,
+  title = {Impacts of Leaf Age and Heat Stress Duration on Photosynthetic Gas Exchange and Foliar Nonstructural Carbohydrates in {{Coffea}} Arabica},
+  author = {Marias, Danielle E. and Meinzer, Frederick C. and Still, Christopher},
+  date = {2017},
+  journaltitle = {Ecology and Evolution},
+  volume = {7},
+  number = {4},
+  pages = {1297--1310},
+  issn = {2045-7758},
+  doi = {10.1002/ece3.2681},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.2681},
+  urldate = {2021-08-01},
+  abstract = {Given future climate predictions of increased temperature, and frequency and intensity of heat waves in the tropics, suitable habitat to grow ecologically, economically, and socially valuable Coffea arabica is severely threatened. We investigated how leaf age and heat stress duration impact recovery from heat stress in C. arabica. Treated plants were heated in a growth chamber at 49°C for 45 or 90 min. Physiological recovery was monitored in situ using gas exchange, chlorophyll fluorescence (the ratio of variable to maximum fluorescence, FV/FM), and leaf nonstructural carbohydrate (NSC) on mature and expanding leaves before and 2, 15, 25, and 50 days after treatment. Regardless of leaf age, the 90-min treatment resulted in greater FV/FM reduction 2 days after treatment and slower recovery than the 45-min treatment. In both treatments, photosynthesis of expanding leaves recovered more slowly than in mature leaves. Stomatal conductance (gs) decreased in expanding leaves but did not change in mature leaves. These responses led to reduced intrinsic water-use efficiency with increasing heat stress duration in both age classes. Based on a leaf energy balance model, aftereffects of heat stress would be exacerbated by increases in leaf temperature at low gs under full sunlight where C. arabica is often grown, but also under partial sunlight. Starch and total NSC content of the 45-min group significantly decreased 2 days after treatment and then accumulated 15 and 25 days after treatment coinciding with recovery of photosynthesis and FV/FM. In contrast, sucrose of the 90-min group accumulated at day 2 suggesting that phloem transport was inhibited. Both treatment group responses contrasted with control plant total NSC and starch, which declined with time associated with subsequent flower and fruit production. No treated plants produced flowers or fruits, suggesting that short duration heat stress can lead to crop failure.},
+  langid = {english},
+  keywords = {chlorophyll fluorescence,heat stress,nonstructural carbohydrates,photosynthesis,stomatal conductance},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.2681},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\BHWTURSI\\Marias et al. - 2017 - Impacts of leaf age and heat stress duration on ph.pdf;C\:\\Users\\Me\\Zotero\\storage\\9K4RMHJQ\\ece3.html}
 }
 
 @article{markesteijnLightdependentLeafTrait2007,
@@ -7779,6 +7824,25 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\LZ64L7YT\\Sage and Kubien - 2007 - The temperature response of C3 and C4 photosynthes.pdf;C\:\\Users\\Me\\Zotero\\storage\\VEI3GYQH\\j.1365-3040.2007.01682.html}
 }
 
+@article{saleskaDryseasonGreeningAmazon2016,
+  title = {Dry-Season Greening of {{Amazon}} Forests},
+  author = {Saleska, Scott R. and Wu, Jin and Guan, Kaiyu and Araujo, Alessandro C. and Huete, Alfredo and Nobre, Antonio D. and Restrepo-Coupe, Natalia},
+  date = {2016-03},
+  journaltitle = {Nature},
+  volume = {531},
+  number = {7594},
+  pages = {E4-E5},
+  publisher = {{Nature Publishing Group}},
+  issn = {1476-4687},
+  doi = {10.1038/nature16457},
+  url = {http://www.nature.com/articles/nature16457},
+  urldate = {2021-08-01},
+  issue = {7594},
+  langid = {english},
+  annotation = {Bandiera\_abtest: a Cg\_type: Nature Research Journals Primary\_atype: Research Subject\_term: Ecosystem ecology;Tropical ecology Subject\_term\_id: ecosystem-ecology;tropical-ecology},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\VIZ5GLU6\\Saleska et al. - 2016 - Dry-season greening of Amazon forests.pdf;C\:\\Users\\Me\\Zotero\\storage\\E365MF6V\\nature16457.html}
+}
+
 @article{sanchesDifferentialLeafTraits2010,
   title = {Differential Leaf Traits of a Neotropical Tree {{Cariniana}} Legalis ({{Mart}}.) {{Kuntze}} ({{Lecythidaceae}}): Comparing Saplings and Emergent Trees},
   shorttitle = {Differential Leaf Traits of a Neotropical Tree {{Cariniana}} Legalis ({{Mart}}.) {{Kuntze}} ({{Lecythidaceae}})},
@@ -10087,6 +10151,26 @@
   langid = {english},
   keywords = {Climate change,Forests,Insects,Linear regression analysis,Pines,Seasons,Trees,Water resources},
   file = {C\:\\Users\\Me\\Zotero\\storage\\97WVF4C6\\Wu et al. - 2012 - Growth Decline Linked to Warming-Induced Water Lim.pdf}
+}
+
+@article{wuLeafDevelopmentDemography2016,
+  title = {Leaf Development and Demography Explain Photosynthetic Seasonality in {{Amazon}} Evergreen Forests},
+  author = {Wu, Jin and Albert, Loren P. and Lopes, Aline P. and Restrepo-Coupe, Natalia and Hayek, Matthew and Wiedemann, Kenia T. and Guan, Kaiyu and Stark, Scott C. and Christoffersen, Bradley and Prohaska, Neill and Tavares, Julia V. and Marostica, Suelen and Kobayashi, Hideki and Ferreira, Mauricio L. and Campos, Kleber Silva and da Silva, Rodrigo and Brando, Paulo M. and Dye, Dennis G. and Huxman, Travis E. and Huete, Alfredo R. and Nelson, Bruce W. and Saleska, Scott R.},
+  date = {2016-02-26},
+  journaltitle = {Science},
+  volume = {351},
+  number = {6276},
+  eprint = {26917771},
+  eprinttype = {pmid},
+  pages = {972--976},
+  publisher = {{American Association for the Advancement of Science}},
+  issn = {0036-8075, 1095-9203},
+  doi = {10.1126/science.aad5068},
+  url = {http://science.sciencemag.org/content/351/6276/972},
+  urldate = {2021-08-01},
+  abstract = {Leaf seasonality in Amazon forests Models assume that lower precipitation in tropical forests means less plant-available water and less photosynthesis. Direct measurements in the Amazon, however, show that production remains constant or increases in the dry season. To investigate this mismatch, Wu et al. use tower-based cameras to detect the phenology (i.e., the seasonal patterns) of leaf dynamics in tropical tree crowns in Amazonia, Brazil, and relate this to patterns of CO2 flux. Accounting for age-dependent variation among individual leaves and crowns is necessary for understanding the seasonal dynamics of photosynthesis in the entire ecosystem. Leaf phenology regulates seasonality of the carbon flux in tropical forests across a gradient of climate zones. Science, this issue p. 972 In evergreen tropical forests, the extent, magnitude, and controls on photosynthetic seasonality are poorly resolved and inadequately represented in Earth system models. Combining camera observations with ecosystem carbon dioxide fluxes at forests across rainfall gradients in Amazônia, we show that aggregate canopy phenology, not seasonality of climate drivers, is the primary cause of photosynthetic seasonality in these forests. Specifically, synchronization of new leaf growth with dry season litterfall shifts canopy composition toward younger, more light-use efficient leaves, explaining large seasonal increases (\textasciitilde 27\%) in ecosystem photosynthesis. Coordinated leaf development and demography thus reconcile seemingly disparate observations at different scales and indicate that accounting for leaf-level phenology is critical for accurately simulating ecosystem-scale responses to climate change. Camera recordings of the age distribution of leaves coupled with carbon dioxide flux data show the phenological basis of photosynthesis. Camera recordings of the age distribution of leaves coupled with carbon dioxide flux data show the phenological basis of photosynthesis.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AUGCAFAX\\Wu et al. - 2016 - Leaf development and demography explain photosynth.pdf;C\:\\Users\\Me\\Zotero\\storage\\ZR4H5S9L\\972.html}
 }
 
 @article{wykaResponsesLeafStructure2012,
