--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -106,7 +106,7 @@ These changes are expected to have profound effects on tree metabolism and fores
  
 **Rising temperatures are likely to have differential impacts on trees of different size and canopy position, in large part because small understory trees exist in a microenvironment that is substantially buffered by the more exposed canopy trees [@zellweger_seasonal_2019; @davisMicroclimaticBufferingForests2019].**
 Forests are vertically and horizontally stratified, with trees of different sizes through various successional stages. 
-Overstory trees form canopies that play a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including understory microclimates by buffering extreme temperatures, solar insolation, wind, and other meteorological conditions [@zellweger_seasonal_2019]. This creates a vertical stratification of biophysical environmental conditions such as temperature, light, wind, humidity and CO~2~ concentrations that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
+Overstory trees form canopies that play a crucial role in moderating forest climatic conditions [@ozanneBiodiversityMeetsAtmosphere2003; @nakamuraForestsTheirCanopies2017], including understory microclimates by buffering extreme temperatures, solar insolation, wind, and other meteorological conditions [@zellweger_seasonal_2019]. This creates a vertical stratification of the biophysical environment such as temperature, light, wind, humidity and CO~2~ concentrations that influences leaf traits, thermoregulation and metabolism along the gradient, with implications for whole plant performance [@fauset_differences_2018; @michaletzEnergeticCarbonEconomic2016].
 Despite the fact that this vertical gradient inevitably shapes nearly every aspect of plant metabolism, demography, and ecology, we lack comprehensive understanding of these gradients [but see @niinemetsPhotosyntheticAcclimationSimultaneous2004b].
 Importantly, this limits our ability to understand how warming temperatures will affect leaf-level metabolism, whole-plant performance, and, in turn, forest ecosystem dynamics, biodiversity, energy balance, ecosystem function, and biosphere-atmosphere interactions.
 
@@ -120,7 +120,7 @@ We focus on five key themes (Fig. `r fig_schematic`):
 (5) the size-structuring of whole-tree and ecosystem function.
 *We then consider the implications for understanding forest responses to global change, including how these responses scale across space and time.* 
 
-![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, when canopy trees are seasonally deciduous, or at nighttime. [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
+![**Figure `r fig_schematic`. Schematic summarizing vertical gradients in forests with dense canopies during daytime growing season conditions.** Patterns summarized here tend to be weaker, or sometimes reversed, under more open canopies, when canopy trees are seasonally deciduous, or at nighttime. Arrows indicate direction of increase, with double-pointed arrows indicating that observations have shown increases both higher and lower in the canopy  [Issue #27](https://github.com/EcoClimLab/vertical-thermal-review/issues/27). ](schematics/Screen Shot 2021-07-19 at 1.10.17 PM.png)
 
 
 
@@ -185,7 +185,7 @@ and increases with VPD, or increases with RH (Fig. `r fig_leaf_T`c).
 
 **Leaf energy balance is a tradeoff between water-use strategy and optimum $T_{leaf}$ [@fauset_differences_2018; @kochDiurnalPatternsLeaf1994].** 
 When $g_s$ is high, high $\lambda E$ facilitates heat dissipation. 
-However, when leaf water demand (influenced by VPD and photosynthetic CO~2~ demand) exceeds the rate of supply, conservation of water ($g_s$ limitation) occurs at the cost of increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
+However, when leaf water demand (influenced by VPD and photosynthetic CO~2~ demand) exceeds the rate of supply, conservation of water ($g_s$-limitation) occurs at the cost of increasing $T_{leaf}$ [Fig. `r fig_leaf_T`e, @fauset_differences_2018].
 Therefore, while under maximum $g_s$, leaves can maintain $T_{leaf}$ closer to $T_{air}$ at high solar radiation loads, during $g_s$- limitation solar radiation can drastically elevate $T_{leaf}$ above $T_{air}$, especially for larger leaves [@fauset_differences_2018; @songTreeSurfaceTemperature2020; @konradLeafTemperatureIts2021].
 With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$ will be most effective at cooling during high temperatures [@songTreeSurfaceTemperature2020; @dongBiophysicalHomoeostasisLeaf2017; @konradLeafTemperatureIts2021; @leighInfluenceLeafSize2017; @leuzingerTreeSpeciesDiversity2007].
 
@@ -193,7 +193,7 @@ With adequate water, species with smaller leaves (higher $g_a$) and larger $g_s$
 
 **These basic biophysical principles shape the propensity for $T_{leaf}$ to be elevated above $T_{air}$ across vertical gradients in closed-canopy forests.**
 High radiation at the top of the vertical profile (Fig. `r fig_NEON_vertical`) implies that canopy leaves have much greater propensity for high $T_{leaf}-T_{air}$, such that they would be expected to be warmer than understory leaves under most conditions (Fig. `r fig_leaf_T`).
-However, higher wind speeds (e.g., up to ~ 4 $ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ $4^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_a$ and $g_s$ (reviewed below) mediate the direct effects of radiation on upper canopy leaves (Fig. `r fig_leaf_T`a) and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may stifle $\lambda E$ (through reduced $g_s$ and $g_a$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
+However, higher wind speeds (e.g., up to ~ 4 $ms^{-1}$ at NEON sites; Fig. `r fig_NEON_vertical`) are capable of lowering $T_{leaf}-T_{air}$ upto ~ $4^\circ$C [Fig. `r fig_leaf_T`b, @bonan_ecological_2016; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. Collectively, higher wind speed (Fig. `r fig_NEON_vertical`), and with adaptive leaf traits increase $g_a$ and $g_s$ (reviewed below) mediate the direct effects of solar radiation on upper canopy leaves (Fig. `r fig_leaf_T`a) and result in higher rates of heat loss (Fig. `r fig_leaf_T`b-e). In contrast, greater RH and lower wind speeds in the understory may stifle $\lambda E$ (through reduced $g_s$ and $g_a$), thereby increasing $T_{leaf}$ [Fig. `r fig_leaf_T`, @perezIncreasingHumidityThreatens2018; @tibbittsHumidityPlants1979b].
 
 **Vertical $T_{leaf}$ gradients are also expected to vary with canopy structure (Fig. `r fig_leaf_T`).**
 Closed canopies with high LAI act as an umbrella, absorbing most of the incoming radiation and preventing vertical air mixing in the understory. The intensity of incoming radiation and VPD in the upper canopy, combined with hydraulic challenges of water transport to the tops of tall trees [**REFS**] can cause $g_s$-limitation. Therefore, we would expect a stronger $T_{leaf}$ gradient where upper canopy leaves can reach much warmer temperatures than lower canopies layers [@millerOnlySunlitLeaves2021]. In contrast, open canopies with lower canopy LAI allow more vertical air mixing and sunlight into the understory. This mixing and light penetration can either neutralize a $T_{leaf}$ gradient or elevate $T_{leaf}-T_{air}$ in the lower canopy relative to the upper canopy. The latter can result from the 'canopy greenhouse effect' or sunflecks, as mentioned above [@hardwickRelationshipLeafArea2015; @schymanskiStomatalControlLeaf2013b], and because shade leaves tend to have lower $g_s$ and greater thermal capacitance [capacity to hold heat, @schymanskiStomatalControlLeaf2013b]. 
@@ -228,7 +228,7 @@ This dichotomy in leaves is observed along the vertical gradient where canopy-le
 
 Across the vertical gradient, traits vary (1) across sun and shade leaves within individuals, (2) across canopy and understory individuals of the same species, and (3) across canopy and understory species. 
 The majority of studies characterizing variation in leaf traits or metabolism examine intraspecific patterns (categories 1 and 2), which are therefore the main focus of this review (Table 1).
-However, when it comes to understanding and modeling forest ecosystem function, relevant scale of variation is interspecific (e.g., *Lamour, Serbin in prep*).
+However, when it comes to understanding and modeling forest ecosystem function, given that species traits strongly shape the propensity for trees to inhabit understory vs. canopy positions, interspecific variation shapes ecosystem function is interspecific (e.g., *Lamour, Serbin in prep*).
 
 
 ### Intraspecific variation
@@ -250,7 +250,7 @@ nocite: |
 
 #### (Anatomical, Morphological and Physiological traits)
 
-Sun leaves have traits that reduce heat and water stress -- for instance, by being smaller, hairier, having higher vein density [Table 1, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and a steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but they are more likely to overheat than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and $VPD$ stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
+Sun leaves have traits that reduce heat and water stress -- for instance, by being smaller, hairier, having higher vein density [Table 1, @leighInfluenceLeafSize2017; @vogelSunLeavesShade1968a; @sackHowStrongIntracanopy2006; @zwienieckiHydraulicLimitationsImposed2004;@mathurPhotosyntheticEfficiencySun2018a], and a steeper leaf-angle [@niinemetsAdjustmentFoliageStructure1998, *REF*]. These traits collectively aid heat dissipation and regulate $T_{leaf}$-photosynthetic balance. In contrast, shade leaves have traits that maximize light capture in the diffuse-light environment with sunflecks (e.g., lower LMA), but they are more likely to overheat than sun leaves due to greater thermal capacitance [@leighInfluenceLeafSize2017; @casasSunShadeLeaves2011; @schymanskiStomatalControlLeaf2013b]. In open canopies, where light is comparatively homogeneous, exposed leaves are primarily shaped by $T_{air_{max}}$ and VPD stress, rather than solely by light [@mediavillaFoliarPlasticityRelated2019a].
 
 #### (Biochemical and elemental traits, and isoprene)
 
@@ -261,14 +261,7 @@ Carotenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and z
 
 #### (Leaf lifecycles)
 
-Leaf age affects vulnerability to heat stress independent of light environment [e.g., Marias et al. 2017], and has a strong effect on metabolism [@kikuzawaSynthesisRelationshipsLeaf2006], including photosynthesis and respiration, and their temperature sensitivities [@zhouLeafageEffectsTemperature2015; @niinemetsLeafAgeDependent2016].
-*In evergreen species,* sun leaves have shorter lifespans than shade leaves; upper canopy leaves are on average younger than subcanopy leaves, therefore operating closer to their photosynthetic optimum. However, because leaf turnover rates of sun leaves in the upper canopy are faster than in the subcanopy, less damage  accumulates [@millerOnlySunlitLeaves2021].
-Once leaves are fully expanded and mature, heat tolerance decreases with leaf age [@zhouLeafageEffectsTemperature2015; REFS], as do $g_s$ and photosynthesis [with a few exceptions, @niinemetsLeafAgeDependent2016]. 
-Additionally, because older leaves reach maximum $T_{leaf}$ sooner than younger leaves and can occupy a large part of the canopy, this would affect vertical gradient of thermal sensitivity [@zhouLeafageEffectsTemperature2015] **this needs some confirming by co-authors**.
-
-The timing of seasonal leaf loss or gain is influenced by vertical microclimate gradients, and in turn can alter forest biophysical and $T_{leaf}$ gradients [@rey-sanchez_spatial_2016].
-Deciduousness in tropical forests is an adaptation to conserve water, and is more common in drier forests and in canopy species [@conditQuantifyingDeciduousnessTropical2000c; @meakemRoleTreeSize2018]. 
-Within tropical deciduous species, the fraction of deciduous individuals tends to increase across tree size classes, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. 
+The vertical structure of microenvironments likely influences forest photosynthetic capacity and $T_{leaf}$ gradients [@rey-sanchez_spatial_2016] via leaf phenology. For example, deciduousness is an adaptation to conserve water during dry periods [@meakemRoleTreeSize2018], but is also structured across the vertical profile. Within tropical deciduous species, the fraction of seasonally deciduous individuals increases toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. Even in evergreen forests, environmental variation alters leaf age distributions [@albertCrypticPhenologyPlants2019], which affects forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] via age-specific leaf function [@albertCrypticPhenologyPlants2019]. Leaf age affects vulnerability to heat stress [@mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015] and can be expected to similarly scale through vertically structured phenology to affect forest responses to heat anomalies. For instance, in tropical evergreen forests, because leaf turnover rates of sun leaves in the upper canopy is faster than in the subcanopy, less damage accumulates [@millerOnlySunlitLeaves2021].
 
 ### Interspecific variation 
 
