Leaf age section needs some more guidance
Working on Ecology section now

--- a/Zotero_references.bib
+++ b/Zotero_references.bib
@@ -2513,6 +2513,24 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\EM582FLA\\Franklin - 2008 - Shade avoidance.pdf;C\:\\Users\\Me\\Zotero\\storage\\5QTVQ9TW\\j.1469-8137.2008.02507.html}
 }
 
+@article{fredeenTemperatureHumidityEffects1999,
+  title = {Temperature and Humidity Effects on Branchlet Gas-Exchange in White Spruce: An Explanation for the Increase in Transpiration with Branchlet Temperature},
+  shorttitle = {Temperature and Humidity Effects on Branchlet Gas-Exchange in White Spruce},
+  author = {Fredeen, A. L. and Sage, R. F.},
+  date = {1999-11-01},
+  journaltitle = {Trees},
+  volume = {14},
+  number = {3},
+  pages = {161--168},
+  issn = {1432-2285},
+  doi = {10.1007/s004680050220},
+  url = {https://doi.org/10.1007/s004680050220},
+  urldate = {2021-08-01},
+  abstract = {In situ gas-exchange data, for branchlets of white spruce [Picea glauca (Moench) Voss.] in a mature mixed-wood boreal forest in central Canada (53°44´N 105°14´W), were subjected to a multiple regression analysis. Vapor pressure deficit (VPD) and branchlet temperature (tleaf) were both significant predictors (P{$<$}0.0001) of stomatal conductance to water vapor (gsw) and net photosynthesis (An), together explaining 67 and 64\% of the variation in gsw and An, respectively. Since VPD and tleaf were autocorrelated in these field data, but also to further explore the nature of independent effects of temperature and humidity on water and CO2 exchange in white spruce, steady-state gas-exchange was performed on well-watered greenhouse-grown seedlings of white spruce. Results from laboratory experiments supported the following conclusions: (1) Transpiration (E) increases with VPD to an inflection point that increases linearly with tleaf. This tleaf effect on E could not be explained by trends in VPD, RH, An or PFD. Rather, our data support a model in which E and gsw are influenced by the balance between ’supply’ and ’loss’ of water to and from leaf tissue, respectively. The supply of water appears to be in accordance with Darcy’s law, where supply of water is proportional to the driving gradient in pressure/ tension, specific permeability (k), and inverse of water viscosity (n–1). Approximately half of the increase in E could be explained by the linear increase in n–1 with increasing tleaf. We propose that increases in k explain the remainder of the increase in E with tleaf. (2) VPD and tleaf appear to have independent effects on gsw. In contrast, RH effects on gsw or E were subtle and could be explained by a combination of effects of tleaf and VPD. (3) An was affected primarily by tleaf, being reduced at low (10°C) and high (40°C) temperatures, and only indirectly by humidity parameters via stomatal conductance, viz. intercellular CO2 concentrations. Our results have implications for the prediction of water fluxes from plants and canopies in areas where plant temperatures vary diurnally or seasonally.},
+  langid = {english},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\UZ8WPI8I\\Fredeen and Sage - 1999 - Temperature and humidity effects on branchlet gas-.pdf}
+}
+
 @article{friedlingsteinClimateCarbonCycle2006,
   title = {Climate–{{Carbon Cycle Feedback Analysis}}: {{Results}} from the {{C4MIP Model Intercomparison}}},
   shorttitle = {Climate–{{Carbon Cycle Feedback Analysis}}},
@@ -2886,6 +2904,25 @@
   keywords = {Biosphere 2,carbohydrates,nitrogen,Populus deltoides (cottonwood),Q10,respiration,scaling,temperature},
   annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1046/j.1469-8137.2002.00410.x},
   file = {C\:\\Users\\Me\\Zotero\\storage\\EZ4TUIKB\\Griffin et al. - 2002 - Canopy position affects the temperature response o.pdf;C\:\\Users\\Me\\Zotero\\storage\\AHG389Y6\\j.1469-8137.2002.00410.html}
+}
+
+@article{grossiordPlantResponsesRising2020,
+  title = {Plant Responses to Rising Vapor Pressure Deficit},
+  author = {Grossiord, Charlotte and Buckley, Thomas N. and Cernusak, Lucas A. and Novick, Kimberly A. and Poulter, Benjamin and Siegwolf, Rolf T. W. and Sperry, John S. and McDowell, Nate G.},
+  date = {2020},
+  journaltitle = {New Phytologist},
+  volume = {226},
+  number = {6},
+  pages = {1550--1566},
+  issn = {1469-8137},
+  doi = {10.1111/nph.16485},
+  url = {https://nph.onlinelibrary.wiley.com/doi/abs/10.1111/nph.16485},
+  urldate = {2021-08-01},
+  abstract = {Recent decades have been characterized by increasing temperatures worldwide, resulting in an exponential climb in vapor pressure deficit (VPD). VPD has been identified as an increasingly important driver of plant functioning in terrestrial biomes and has been established as a major contributor in recent drought-induced plant mortality independent of other drivers associated with climate change. Despite this, few studies have isolated the physiological response of plant functioning to high VPD, thus limiting our understanding and ability to predict future impacts on terrestrial ecosystems. An abundance of evidence suggests that stomatal conductance declines under high VPD and transpiration increases in most species up until a given VPD threshold, leading to a cascade of subsequent impacts including reduced photosynthesis and growth, and higher risks of carbon starvation and hydraulic failure. Incorporation of photosynthetic and hydraulic traits in ‘next-generation’ land-surface models has the greatest potential for improved prediction of VPD responses at the plant- and global-scale, and will yield more mechanistic simulations of plant responses to a changing climate. By providing a fully integrated framework and evaluation of the impacts of high VPD on plant function, improvements in forecasting and long-term projections of climate impacts can be made.},
+  langid = {english},
+  keywords = {mortality,productivity,stomatal conductance,transpiration,warming},
+  annotation = {\_eprint: https://nph.onlinelibrary.wiley.com/doi/pdf/10.1111/nph.16485},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\ANMWA6DM\\Grossiord et al. - 2020 - Plant responses to rising vapor pressure deficit.pdf;C\:\\Users\\Me\\Zotero\\storage\\I3RERMRF\\nph.html}
 }
 
 @online{GsglobalLeafgasexchangeBitbucket,
@@ -6998,6 +7035,13 @@
   file = {C\:\\Users\\Me\\Zotero\\storage\\DFV3GY5Z\\Pincebourde and Casas - 2019 - Narrow safety margin in the phyllosphere during th.pdf;C\:\\Users\\Me\\Zotero\\storage\\ZSJ6SDWI\\5588.html}
 }
 
+@online{PlantResponsesRising,
+  title = {Plant Responses to Rising Vapor Pressure Deficit - {{Grossiord}} - 2020 - {{New Phytologist}} - {{Wiley Online Library}}},
+  url = {https://nph.onlinelibrary.wiley.com/doi/full/10.1111/nph.16485},
+  urldate = {2021-08-01},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\AP853I8W\\nph.html}
+}
+
 @article{poorterCausesConsequencesVariation2009a,
   title = {Causes and Consequences of Variation in Leaf Mass per Area ({{LMA}}): A Meta-Analysis},
   shorttitle = {Causes and Consequences of Variation in Leaf Mass per Area ({{LMA}})},
@@ -8284,6 +8328,26 @@
   urldate = {2020-12-22},
   abstract = {Explore millions of resources from scholarly journals, books, newspapers, videos and more, on the ProQuest Platform.},
   langid = {english}
+}
+
+@article{sharkeyEffectsModerateHeat2005,
+  title = {Effects of Moderate Heat Stress on Photosynthesis: Importance of Thylakoid Reactions, Rubisco Deactivation, Reactive Oxygen Species, and Thermotolerance Provided by Isoprene},
+  shorttitle = {Effects of Moderate Heat Stress on Photosynthesis},
+  author = {Sharkey, Thomas D.},
+  date = {2005},
+  journaltitle = {Plant, Cell \& Environment},
+  volume = {28},
+  number = {3},
+  pages = {269--277},
+  issn = {1365-3040},
+  doi = {10.1111/j.1365-3040.2005.01324.x},
+  url = {http://onlinelibrary.wiley.com/doi/abs/10.1111/j.1365-3040.2005.01324.x},
+  urldate = {2021-08-01},
+  abstract = {Photosynthesis is particularly sensitive to heat stress and recent results provide important new insights into the mechanisms by which moderate heat stress reduces photosynthetic capacity. Perhaps most surprising is that there is little or no damage to photosystem II as a result of moderate heat stress even though moderate heat stress can reduce the photosynthetic rate to near zero. Moderate heat stress can stimulate dark reduction of plastoquinone and cyclic electron flow in the light. In addition, moderate heat stress may increase thylakoid leakiness. At the same time, rubisco deactivates at moderately high temperature. Relationships between effects of moderate heat on rubisco activation and thylakoid reactions are not yet clear. Reactive oxygen species such as H2O2 may also be important during moderate heat stress. Rubisco can make hydrogen peroxide as a result of oxygenase side reactions and H2O2 production by rubisco was recently shown to increase substantially with temperature. The ability to withstand moderately high temperature can be improved by altering thylakoid lipid composition or by supplying isoprene. In my opinion this indicates that thylakoid reactions are important during moderate heat stress. The deactivation of rubisco at moderately high temperature could be a parallel deleterious effect or a regulatory response to limit damage to thylakoid reactions.},
+  langid = {english},
+  keywords = {heat stress,isoprene,photosynthesis,reactive oxygen species,rubisco,thylakoid reactions},
+  annotation = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1111/j.1365-3040.2005.01324.x},
+  file = {C\:\\Users\\Me\\Zotero\\storage\\CUY7ZI89\\Sharkey - 2005 - Effects of moderate heat stress on photosynthesis.pdf;C\:\\Users\\Me\\Zotero\\storage\\TM3PT9G6\\j.1365-3040.2005.01324.html}
 }
 
 @article{sharkeyFutureIsopreneEmission2014,
