--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -261,7 +261,7 @@ Carotenoids and xanthophyll cycle pigments -- violaxanthin, antheraxanthin and z
 
 #### (Leaf lifecycles)
 
-The vertical structure of microenvironments likely influences forest photosynthetic capacity and $T_{leaf}$ gradients [@rey-sanchez_spatial_2016] via leaf phenology. For example, deciduousness is an adaptation to conserve water during dry periods [@meakemRoleTreeSize2018], but is also structured across the vertical profile. Within tropical deciduous species, the fraction of seasonally deciduous individuals increases toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. Even in evergreen forests, environmental variation alters leaf age distributions [@albertCrypticPhenologyPlants2019], which affects forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] via age-specific leaf function [@albertCrypticPhenologyPlants2019]. Leaf age affects vulnerability to heat stress [@mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015] and can be expected to similarly scale through vertically structured phenology to affect forest responses to heat anomalies. For instance, in tropical evergreen forests, because leaf turnover rates of sun leaves in the upper canopy is faster than in the subcanopy, less damage accumulates [@millerOnlySunlitLeaves2021].
+The vertical structure of microenvironments likely influences forest photosynthetic capacity and $T_{leaf}$ gradients [@rey-sanchez_spatial_2016] via leaf phenology. For example, deciduousness is an adaptation to conserve water during dry periods [@meakemRoleTreeSize2018], but is also structured across the vertical profile. Within tropical deciduous species, the fraction of seasonally deciduous individuals increases toward larger tree size classes in hotter, brighter environments, with understory individuals typically remaining evergreen [@conditQuantifyingDeciduousnessTropical2000c]. Even in evergreen forests, environmental variation alters leaf age distributions [@albertCrypticPhenologyPlants2019], which affects forest photosynthetic capacity [@wuLeafDevelopmentDemography2016; @niinemetsLeafAgeDependent2016] and heat stress via age-specific leaf function [@albertCrypticPhenologyPlants2019]. For instance, in tropical evergreen forests, because leaf turnover rates of sun leaves in the upper canopy is faster than in the subcanopy, less damage accumulates [@millerOnlySunlitLeaves2021]. Leaf age affects vulnerability to heat stress and has a strong effect on metabolism  [@mariasImpactsLeafAge2017; @zhouLeafageEffectsTemperature2015; @kikuzawaSynthesisRelationshipsLeaf2006], and can be expected to similarly scale through vertically structured phenology to affect forest responses to heat anomalies.
 
 ### Interspecific variation 
 
@@ -295,7 +295,7 @@ Maximum $g_s$ increases with light environment, and is thus higher in the sun ex
 **Photosynthetic capacity is generally higher in exposed canopy positions-- a fact that is both theoretically expected and observed in numerous field studies (Table 2; Niinemets 2007 ; Kenzo et al. 2015 ; Slot et al. 2019; Chen et al. 2020).**
 This is primarily driven by the greater light available to sun leaves, which also have traits enabling higher photosynthetic rates under high light and sufficient nutrient and water conditions (Table 1, Table 2). 
 
-Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and the electron transport chain, and indirectly through increased VPD causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to $T_{air}$, with the peak commonly found to corresponding to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure [e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020, temperate/boreal refs needed], and eventually due to biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019a; @sageTemperatureResponseC32007; @varhammarPhotosyntheticTemperatureResponses2015].
+Temperature can affect photosynthesis via direct and indirect pathways--directly, by altering photosynthetic enzyme activity and the electron transport chain, and indirectly through increased VPD causing stomatal closure [@lloydEffectsRisingTemperatures2008]. Photosynthesis has a peaked response to $T_{air}$, with the peak commonly found to corresponding to the prevalent ambient growing season conditions [@tanOptimumAirTemperature2017; @slotSituTemperatureResponse2017; @doughtyAreTropicalForests2008]. Beyond the optimum, photosynthesis decreases as a result of stomatal closure [e.g. @slotSituTemperatureResponse2017; @smithEmpiricalEvidenceResilience2020; @grossiordPlantResponsesRising2020; @fredeenTemperatureHumidityEffects1999], and eventually due to biochemical constraints [@kumarathungeAcclimationAdaptationComponents2019a; @sageTemperatureResponseC32007; @varhammarPhotosyntheticTemperatureResponses2015; @sharkeyEffectsModerateHeat2005].
 
 **We have very little evidence as to how the temperature sensitivity of photosynthesis compares between sun and shade leaves.**
 Based on consistent positive relationships between growth temperature and temperature optimum of photosynthesis ($T_{opt}$) across sites and seasons [e.g. @tanOptimumAirTemperature2017; @kumarathungeAcclimationAdaptationComponents2019a], one might expect sun leaves to have a stronger temperature-dependence and higher temperature optima than shade leaves [Campbell and Norman 1998; @niinemetsShapeLeafPhotosynthetic1999; @niinemetsPhotosyntheticAcclimationSimultaneous2004b]. However, such a trend is not apparent among recent studies, where for three species in Panama, the $T_{opt}$ for sun leaves tended to be moderately, but not significantly, higher than that of shade leaves [@slotPhotosyntheticHeatTolerance2019a; @hernandezSimilarTemperatureDependence2020]. Similarly, $T_{opt}$ of the RuBP carboxylation  ($V_{max}$) and regeneration rates ($J_{max}$) did not differ systematically between tropical sun and shade leaves [@hernandezSimilarTemperatureDependence2020], and along vertical gradients of tropical and temperate trees [@mau_temperate_2018; @millerOnlySunlitLeaves2021;@mau_temperate_2018]. In contrast, tropical experimental warming observations showed that $T_{opt}$, and $T_{opt}$ of $J_{max}$ decrease from the understory to the canopy, potentially linked to greater thermal sensitivity of $g_s$ in upper canopy leaves [@carterExperimentalWarmingTropical2021]. 
